syntax = "proto3";

package autokitteh.orgs.v1;

import "autokitteh/orgs/v1/org.proto";
import "buf/validate/validate.proto";
import "google/protobuf/field_mask.proto";

message CreateRequest {
  Org org = 1 [(buf.validate.field).required = true];
}

message CreateResponse {
  string org_id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetRequest {
  string org_id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetResponse {
  Org org = 1;
}

message DeleteRequest {
  string org_id = 1 [(buf.validate.field).string.min_len = 1];
}

message DeleteResponse {}

message UpdateRequest {
  Org org = 1 [(buf.validate.field).required = true];
  google.protobuf.FieldMask field_mask = 2;
}

message UpdateResponse {}

message AddMemberRequest {
  OrgMember member = 3 [(buf.validate.field).required = true];
}

message AddMemberResponse {}

message RemoveMemberRequest {
  string user_id = 1 [(buf.validate.field).string.min_len = 1];
  string org_id = 2 [(buf.validate.field).string.min_len = 1];
}

message RemoveMemberResponse {}

message GetMemberRequest {
  string user_id = 1 [(buf.validate.field).string.min_len = 1];
  string org_id = 2 [(buf.validate.field).string.min_len = 1];
}

message GetMemberResponse {
  OrgMember member = 1;
}

message ListMembersRequest {
  string org_id = 1 [(buf.validate.field).string.min_len = 1];
}

message ListMembersResponse {
  repeated OrgMember members = 1 [(buf.validate.field).repeated.items.required = true];
}

message GetOrgsForUserRequest {
  string user_id = 1;
  bool include_orgs = 2;
}

message GetOrgsForUserResponse {
  repeated OrgMember members = 1 [(buf.validate.field).repeated.items.required = true];
  map<string, Org> orgs = 2;
}

message UpdateMemberRequest {
  OrgMember member = 3;
  google.protobuf.FieldMask field_mask = 2;
}

message UpdateMemberResponse {}

service OrgsService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  rpc AddMember(AddMemberRequest) returns (AddMemberResponse);
  rpc UpdateMember(UpdateMemberRequest) returns (UpdateMemberResponse);
  rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse);
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);
  rpc GetMember(GetMemberRequest) returns (GetMemberResponse);
  rpc GetOrgsForUser(GetOrgsForUserRequest) returns (GetOrgsForUserResponse);
}
